--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - 2.7
 install:
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -r requirements.txt
 script: python airtable/airtable_test.py
 notifications:
   email:
