--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
 python:
   - 2.7
+  - 3.7
 install:
   - pip install -r requirements.txt
 script: python airtable/airtable_test.py
 notifications:
   email:
-    - nico.canali@gmail.com
+    - joseph@bestjames.com
