Revert "more trav"
This reverts commit 764aef296c999505b5ff170a730ac1d560d5db00.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: python
 python:
   - 2.7
-  - 3.7
 install:
   - pip install -r requirements.txt
 script: python airtable/airtable_test.py
 notifications:
   email:
-    - joseph@bestjames.com
+    - nico.canali@gmail.com
