--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ python:
   - 3.9
 install:
   - pip install -r requirements.txt
-script: python test_airtable.py
+  - "[[ $TRAVIS_PYTHON_VERSION == 2.7 ]] || pip install -r requirements-test.txt"
+script:
+  - python test_airtable.py
+  - "[[ $TRAVIS_PYTHON_VERSION == 2.7 ]] || PYTHONPATH=. stubtest airtable"
 notifications:
   email:
     - joseph@bestjames.com
